kube-config/01-tempfiles-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tempfiles-backend-deploy
spec:
  replicas: 3
  selector:
    matchLabels:
      app: tf-backpod
  template:
    metadata:
      name: tempfiles-backend-pod
      labels:
        app: tf-backpod
    spec:
      containers:
        - name: tempfiles-backend-container
          image: minpeter/tempfiles-backend
          ports:
            - containerPort: 5000
              name: tf-backend-port
          volumeMounts:
            - mountPath: /app/tmp
              name: backend-storage
      volumes:
        - name: backend-storage
          persistentVolumeClaim:
            claimName: tempfiles-backend-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: tempfiles-backend-svc
spec:
  ports:
    - name: tf-backend-svc-port
      port: 80
      targetPort: tf-backend-port
  selector:
    app: tf-backpod
  type: ClusterIP
