kube-config/01-tempfiles-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tempfiles-frontend-deploy
spec:
  replicas: 3
  selector:
    matchLabels:
      app: tf-frontpod
  template:
    metadata:
      name: tempfiles-frontend-pod
      labels:
        app: tf-frontpod
    spec:
      containers:
        - name: tempfiles-frontend-container
          image: ananjaemin/tempfiles-frontend
          ports:
            - containerPort: 80
              name: tf-front-port

---
apiVersion: v1
kind: Service
metadata:
  name: tempfiles-frontend-svc
spec:
  ports:
    - name: tf-frontend-svc-port
      port: 80
      targetPort: tf-front-port
  selector:
    app: tf-frontpod
  type: ClusterIP
