kube-config/01-tempfiles-psql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tempfiles-psql-deploy

spec:
  replicas: 1
  selector:
    matchLabels:
      app: tf-psqlpod
  template:
    metadata:
      labels:
        app: tf-psqlpod
    spec:
      containers:
        - name: tempfiles-postgres-container
          image: postgres:alpine
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5432
              name: tf-psql-port
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgredb-storage
      volumes:
        - name: postgredb-storage
          persistentVolumeClaim:
            claimName: tempfiles-psql-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: tempfiles-psql-svc
spec:
  type: ClusterIP
  ports:
    - name: tf-psql-svc-port
      port: 5432
      targetPort: tf-psql-port
  selector:
    app: tf-psqlpod
